force-app/main/default/objects/Chennai_Metro__c/Chennai_Metro__c.object-meta.xml
<CustomObject>
    <label>Chennai Metro</label>
    <nameField>
        <label>Metro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chennai Metros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>