force-app/main/default/objects/Chennai_Metro__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <displayFormat>ACC-{000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>