force-app/main/default/objects/Chennai_Metro__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Thirupathi</fullName>
            </value>
            <value>
                <fullName>Salem</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>