force-app/main/default/objects/Chennai_Metro__c/fields/Class_Classifaction__c.field-meta.xml
<CustomField>
    <fullName>Class_Classifaction__c</fullName>
    <label>Class Classifaction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Exceutive</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>