force-app/main/default/objects/Chennai_Metro__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>