force-app/main/default/objects/Chennai_Metro__c/fields/Wifi__c.field-meta.xml
<CustomField>
    <fullName>Wifi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wifi</label>
    <type>Checkbox</type>
</CustomField>