force-app/main/default/objects/Chennai_Metro__c/recordTypes/Non_Premium_Class.recordType-meta.xml
<RecordType>
    <fullName>Non_Premium_Class</fullName>
    <active>true</active>
    <label>Non Premium Class</label>
</RecordType>