force-app/main/default/objects/Chennai_Metro__c/recordTypes/Premium_Class.recordType-meta.xml
<RecordType>
    <fullName>Premium_Class</fullName>
    <active>true</active>
    <label>Premium Class</label>
</RecordType>