force-app/main/default/objects/Chennai_Metro__c/validationRules/Status_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account_Status__c,&apos;Closed&apos;),ISBLANK(End_Date__c))</errorConditionFormula>
    <errorDisplayField>Account_Status__c</errorDisplayField>
    <errorMessage>End Date Should not be null</errorMessage>
</ValidationRule>